# ld52

./: .envrc  .gdignore  .gitignore  BaseLevel.gd  BaseLevel.tscn  Chicken.gd  Chicken.tscn  Corn.tscn  Credits.gd  Credits.tscn  Finish.tscn  GameOver.gd  GameOver.tscn  Grain.tscn  HighScores.gd  HighScores.tscn  LapLabel.gd  Level1.tscn  Level2.tscn  Level3.tscn  Level4.tscn  MainMenu.gd  MainMenu.tscn  NegativePickup.gd  NewHighScore.tscn  PathFollow.gd  Pickup.gd  Pickup.tscn  Player.gd  Player.tscn  PositivePickup.gd  ScoreLabel.gd  ScorePickup.gd  Stump.tscn  TimerLabel.gd  car.png.import  devenv.nix  export_presets.cfg  index.html  level_0.tscn  (+10 more)
.import/: WindowImage.jpg-2b177f30b049d230ea10737513583ccd.md5  WindowImage.jpg-2b177f30b049d230ea10737513583ccd.stex  WindowImage.jpg-4d876b247d15d9426c72fe6624194fd6.md5  WindowImage.jpg-4d876b247d15d9426c72fe6624194fd6.stex  WindowImage.jpg-6c42614ee56e96cce3b808155ed6c38d.md5  WindowImage.jpg-6c42614ee56e96cce3b808155ed6c38d.stex  WindowImage.jpg-c452980a94e9408607d951bdb241052b.md5  WindowImage.jpg-c452980a94e9408607d951bdb241052b.stex  car.png-021a5d1fff5494b94b6d2dc9f132616d.etc2.stex  car.png-021a5d1fff5494b94b6d2dc9f132616d.md5  car.png-021a5d1fff5494b94b6d2dc9f132616d.s3tc.stex  chicken.mp3-09b71fee74d32fd8d8168796ed4fe051.md5  chicken.mp3-09b71fee74d32fd8d8168796ed4fe051.mp3str  chicken.png-9eb0dd177af50e8c4f041accb12d71e4.md5  chicken.png-9eb0dd177af50e8c4f041accb12d71e4.s3tc.stex  chicken.png-9eb0dd177af50e8c4f041accb12d71e4.stex  corn.png-13a0c6b6255c8c6bc234f70791ee6862.md5  (+68 more)
assets/: stump.png.import
(+60 files in other folders)
