[tool.poetry]
name = "ld52"
version = "0.1.0"
description = ""
authors = ["Bob van der Linden <bobvanderlinden@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
